Bug 77088 - Brutal performance regression of WMF rendering on 64-bit
Summary: Brutal performance regression of WMF rendering on 64-bit
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-04-05 18:01 UTC by Andras Timar
Modified: 2014-04-22 19:49 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2014-04-05 18:01:25 UTC
Try to open https://bugs.freedesktop.org/attachment.cgi?id=93188 (from bug 74336) on a 64-bit operating system (tested both on Mac and on Linux). The CPU will be at 100% for a very-very long time, after hours the graph, which is a WMF image, is rendered. On 32-bit systems (tested on Mac, Windows, and Linux), the graph appears almost immediately.

Git bisect showed that bug was triggered by 09c722873b2d378d2d155f5f1dd7d8f3fb2012e9. However, I think that it only made the bug visible, the problem is elsewhere.
Comment 1 Commit Notification 2014-04-18 19:07:36 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa632a57b7fcbc0a790fc6615174f25b7f640713

fdo#77088 WMF - replace 32-bit min/max assumption with const



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-04-22 19:49:50 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=10e38e72f4f940bf7bbf9865d76c17a731c3200b&h=libreoffice-4-2

fdo#77088 WMF - replace 32-bit min/max assumption with const


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.