fdo#77088 WMF - replace 32-bit min/max assumption with const

Added RECT_MIN and RECT_MAX which represent the minimum and
maximum value a Rectangle object can hold. In WMF we used a 32-bit
assumption what the min and max value could be (0x7fffffff,
0x80000000) which causes problems on 64-bit systems.

Change-Id: Ic62daebbc2708cdeb7b0cf7b694bd9940eb98313